--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
 }
 
 body {
-  width: 1440px;
-  display: block;
   margin: auto;
   margin-top: 10%;
   background-color: hsl(0, 0%, 95%);
@@ -40,7 +38,8 @@ p {
 }
 
 .card {
-  width: 200px;
+  max-width: 200px;
+  min-width: 110px;
   height: 400px;
   padding: 45px;
   white-space: normal;
@@ -49,11 +48,24 @@ p {
 }
 
 button {
-  width: 70%;
-  height: 10%;
-  font-size: 1em;
+  width: 140px;
+  height: 50px;
+  font-size: 0.75em;
   border-radius: 20px;
-  border-color: white;
+  border: none;
+  background-color: white;
+}
+
+.btn-1 {
+  color: hsl(31, 77%, 52%);
+}
+
+.btn-2 {
+  color: hsl(184, 100%, 22%);
+}
+
+.btn-3 {
+  color: hsl(179, 100%, 13%);
 }
 
 #sedans {
@@ -69,9 +81,37 @@ button {
 }
 
 .attribution {
+  align-self: flex-end;
   font-size: 11px;
   text-align: center;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+/* Media Queries */
+
+@media (max-width: 375px) {
+  body {
+    padding-top: 10px;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card {
+    width: 95%;
+    height: 300px;
+  }
+
+  p {
+    font-size: 0.9em;
+  }
+
+  button {
+    width: 120px;
+    height: 60px;
+  }
 }
