--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap");
 
 * {
-  font-size: 14px;
+  font-weight: 400;
+  font-size: 15px;
   color: white;
   font-family: "Lexend Deca", sans-serif;
 }
@@ -11,6 +12,7 @@ body {
   margin: auto;
   margin-top: 10%;
   background-color: hsl(0, 0%, 95%);
+  min-width: 375px;
 }
 
 img {
@@ -60,15 +62,32 @@ button {
   color: hsl(31, 77%, 52%);
 }
 
+.btn-1:hover {
+  color: white;
+  background-color: hsl(31, 77%, 52%);
+  border: 2px solid white;
+}
+
 .btn-2 {
   color: hsl(184, 100%, 22%);
+}
+.btn-2:hover {
+  color: white;
+  background-color: hsl(184, 100%, 22%);
+  border: 2px solid white;
 }
 
 .btn-3 {
   color: hsl(179, 100%, 13%);
 }
+.btn-3:hover {
+  color: white;
+  background-color: hsl(179, 100%, 13%);
+  border: 2px solid white;
+}
 
 #sedans {
+  border-radius: 20px 0 0 20px;
   background-color: hsl(31, 77%, 52%);
 }
 
@@ -78,12 +97,14 @@ button {
 
 #luxury {
   background-color: hsl(179, 100%, 13%);
+  border-radius: 0 20px 20px 0;
 }
 
 .attribution {
   align-self: flex-end;
   font-size: 11px;
   text-align: center;
+  color: black;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
@@ -113,5 +134,15 @@ button {
   button {
     width: 120px;
     height: 60px;
+  }
+
+  #sedans {
+    border-radius: 20px 20px 0 0;
+    background-color: hsl(31, 77%, 52%);
+  }
+
+  #luxury {
+    background-color: hsl(179, 100%, 13%);
+    border-radius: 0 0 20px 20px;
   }
 }
